# swampqueen

./: Cargo.toml  README.md  deny.toml
swampqueen-core/: Cargo.toml
swampqueen-core/src/: character.rs  dice.rs  files.rs  lib.rs  location.rs  ui.rs
swampqueen-core/testfiles/: test.json  text.json
swampqueen-core/testfiles/locations/: testplace.json
swampqueen-core/testfiles/text/: testplace.json
swampqueen-desktop/: Cargo.toml
swampqueen-desktop/src/: main.rs
