[package]
name = "swampqueen-core"
version = "0.1.0"
authors = ["M Siwak", "Max Gilmour"]
edition = "2024"
description = "Text RPG"
readme = "README.md"
homepage = "https://github.com/OrigamiEnderdragon/swampqueen"
repository = "https://github.com/OrigamiEnderdragon/swampqueen"
license = "AGPL-3.0"
keywords = []
exclude = []
include = []

[dependencies]
camino = "1.1.9"
color-eyre = "0.6.3"
rand = "0.9.1"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
